Finished chapter 3s module 3
